# File-Sharing

./: README.md
p2p/: CMakeLists.txt  config.ini  config1.ini  logs.txt
p2p/buid/: CMakeCache.txt  build.ninja  cmake_install.cmake
p2p/src/: main.cpp
p2p/src/core/: ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  PeerCore.cpp  PeerCore.h
p2p/src/crypto/: CryptoEngine.cpp  CryptoEngine.h  KeyExchange.cpp  KeyExchange.h
p2p/src/discovery/: DiscoveryService.cpp  DiscoveryService.h  PeerTable.cpp  PeerTable.h
p2p/src/net/: TcpConnection.cpp  TcpConnection.h  TcpListener.cpp  TcpListener.h
p2p/src/protocol/: Message.h  MessageFramer.cpp  MessageFramer.h  ProtocolSession.cpp  ProtocolSession.h
p2p/src/storage/: ChunkManager.cpp  ChunkManager.h  FileManager.cpp  FileManager.h  ResumeState.cpp  ResumeState.h
p2p/src/ui/: CLI.cpp  CLI.h  ProgressTracker.cpp  ProgressTracker.h
p2p_fileSharing_v1.0/: config.ini
